(24/02) Exercício de formatação de textos

--- a/02-textos.html
+++ b/02-textos.html
@@ -17,16 +17,29 @@
 
         marc {
             background-color:cyan;
+            
+        }
+        .titulo {
+            color: blue;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <h1>Foramatação de texto</h1>
+    <h1 class="titulo">Foramatação de texto</h1>
 
     <p>Orkutilson morava na <address>Rua do sobe e desce, 333</address>, e seu email era <address>orcutilton@gmail.com</address></p>
     
     <p>Ele estáva em uma <b>Escola Estadual</b> e sua matéria preferiada era <i>Matemática</i>.</p>
 
     <p>Ele estáva em uma <marc>Escola Estadual</marc> e sua matéria preferiada era <i>Matemática</i>.</p>
+
+
+    <!-- <quote> = citações no meio de um paragrafo
+        <blockquote> = um bloco de citação(com várias linhas, por exemplo)   
+    -->
+    <p>Sua frase favorita era <quote>"Penso, logo existo(descartes)"</quote>.</p>
+    </br>
+    <p>Hellow</p>
 </body>
 </html>
